# renju_sgf_parser

./: CMakeLists.txt  README.md  build.sh
RenjuSGFParserTest/: RenjuSGFParserTest.cc  run.sh
src/: RenjuSGFParser.cc  main.cc
src/include/: RenjuSGFParser.h
test/: CMakeLists.txt  RenjuSGFParserTest.cc  run.sh
