cmake_minimum_required(VERSION 3.5.1)

# プロジェクト名
set(project_name renju_sgf_parser)
project(${project_name} CXX)

# Build Type(Release or Debug)
set(CMAKE_BUILD_TYPE Release)

# ccache
find_program(CCACHE_FOUND ccache)
if(CCACHE_FOUND)
        set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
        set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
endif(CCACHE_FOUND)

# コンパイルオプション
add_definitions("-Wall -std=c++14")

# インクルードパス
include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/realcore/src/include)

# ライブラリパス
link_directories($ENV{BOOST_DIR}/lib)

# ソースファイル
add_executable(
    ${project_name}
    ./realcore/src/Move.cc
    ./realcore/src/MoveList.cc
    ./realcore/src/SGFParser.cc
    ../src/RenjuSGFParser.cc
    ../src/main.cc
)

# ライブラリ
target_link_libraries(${project_name} boost_program_options)

